--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Codadu Potfolio</title>
+    <title>Angela Du Potfolio</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -69,7 +69,7 @@
         <div class="container text-center">
             <div class="row">
                 <div class="col-lg-10 mx-auto">
-                    <h2>Click <a href="">Here</a> to see my Resume</h2>
+                    <h2>Click <a href="src/resume.html" target="_blank">Here</a> to see my Resume</h2>
                     <br>
                     <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What I can Offer</a>
                 </div>
@@ -99,7 +99,7 @@
             <i class="icon-pencil"></i>
           </span>
                     <h4>
-                        <strong>Resbonsive Webpages</strong>
+                        <strong>Responsive Webpages</strong>
                     </h4>
                     <p class="text-faded mb-0">Freshly redesigned base on Bootstrap 4 and Foundation.</p>
                 </div>
