upload template2 and 3

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Angela Du Potfolio</title>
+    <title>Angela Du's Potfolio</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@
                 <a class="js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="sidebar-nav-item">
-                <a class="js-scroll-trigger" href="#services">Services</a>
+                <a class="js-scroll-trigger" href="#services">What I Offer</a>
             </li>
             <li class="sidebar-nav-item">
                 <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
@@ -55,9 +55,9 @@
     <!-- Header -->
     <header class="masthead d-flex">
         <div class="container text-center my-auto">
-            <h1 class="mb-1">Angela Du Portfolio</h1>
+            <h1 class="mb-1">Angela Du's Portfolio</h1>
             <h3 class="mb-5">
-                <em>This Portfolio is built base on Bootstrap 4!</em>
+                <em>This Portfolio is built on Bootstrap 4!</em>
             </h3>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
         </div>
@@ -81,8 +81,7 @@
     <section class="content-section bg-primary text-white text-center" id="services">
         <div class="container">
             <div class="content-section-heading">
-                <h3 class="text-secondary mb-0">Services</h3>
-                <h2 class="mb-5">What We Offer</h2>
+                <h2 class="mb-5">What I Offer</h2>
             </div>
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
@@ -110,7 +109,7 @@
                     <h4>
                         <strong>Debugging</strong>
                     </h4>
-                    <p class="text-faded mb-0">Error free testing</p>
+                    <p class="text-faded mb-0">Result in Error free products</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <span class="service-icon rounded-circle mx-auto mb-3">
@@ -137,26 +136,30 @@
                     <a class="portfolio-item" href="src/edm_template1.html" target="_blank">
                         <span class="caption">
                           <span class="caption-content">
-                            <h2>Stationary</h2>
-                            <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                            <h2>Generic EDM template</h2>
+                            <ul>
+                                <li>Built from scratch using pure HTML and CSS</li>
+                                <li>Tested aross over 20 Email Providers and Devices(i.e. Desktop, Tablet, Mobile, etc)</li>
+                                <li>Can be customized for different purposes</li>
+                            </ul>
                           </span>
                         </span>
                         <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
                     </a>
                 </div>
                 <div class="col-lg-6">
-                    <a class="portfolio-item" href="#">
+                    <a class="portfolio-item" href="src/edm_template2.html" target="_blank">
                         <span class="caption">
                           <span class="caption-content">
-                            <h2>Ice Cream</h2>
-                            <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                            <h2>Chrismas card - Email</h2>
+                            <p class="mb-0">This email template is used for sending Chrismas Greeting</p>
                           </span>
                         </span>
                         <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
                     </a>
                 </div>
                 <div class="col-lg-6">
-                    <a class="portfolio-item" href="#">
+                    <a class="portfolio-item" href="src/edm_template3.html" target="_blank">
                         <span class="caption">
                           <span class="caption-content">
                             <h2>Strawberries</h2>
