--- a/src/resume.html
+++ b/src/resume.html
@@ -29,7 +29,7 @@
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
             <span class="d-block d-lg-none">Angela Du</span>
             <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="../img/profile.jpg" alt="">
       </span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,9 +67,10 @@
                     <span class="text-primary">Du</span>
                 </h1>
                 <div class="subheading mb-5">Hornsby NSW · 0416 136 486 ·
-                    <a href="mailto:name@email.com">swellanddsy@hotmail.com</a>
+                    <a href="mailto:swellanddsy@hotmail.com">swellanddsy@hotmail.com</a>
                 </div>
-                <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                <p class="lead mb-5">I have 4 years of experiences in EDMs and Website development. I have independently developed responsive and nonresponsive websites and have built email templates from scratch using Photoshop, html5, CSS3 and JavaScript/Jquery. These are
+                    generic templates which can be customized to meet any given requirement.</p>
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/angela-du-26187869/">
                         <i class="fab fa-linkedin-in"></i>
@@ -94,8 +95,6 @@
                     <div class="resume-content">
                         <h3 class="mb-0">Digital Developer/Web Developer</h3>
                         <div class="subheading mb-3">Aimia</div>
-                        <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.
-                            User generated content in real-time will have multiple touchpoints for offshoring.</p>
                         <ul>
                             <li>Develop and deploy sophisticated email marketing communications using email-specific HTML/CSS with Aimia's Marketing Automation platform.</li>
                             <li>Created dynamic marketing emails using Silverpop which improved email CTR (Click Through Rate). Build and maintain Three of Four Major Australia banks Loyalty Email templates from scratch.</li>
@@ -114,10 +113,10 @@
                     <div class="resume-content">
                         <h3 class="mb-0">Web Developer</h3>
                         <div class="subheading mb-3">Agentbox</div>
-                        <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
                         <ul>
                             <li>Designing template websites for Real Estate clients using Photoshop.</li>
-                            <li>Work with designers to gather requirements and then implement Web and mobile projects which convert detailed mock-ups (normally *.psd files) into fully functioning production ready code using HTML, SASS/CSS, JavaScript, JQuery, PHP, and MySQL.</li>
+                            <li>Work with designers to gather requirements and then implement Web and mobile projects which convert detailed mock-ups (normally *.psd files) into fully functioning production ready code using HTML, SASS/CSS, JavaScript, JQuery,
+                                PHP, and MySQL.</li>
                             <li>Integrating front end designs with back end services, content management systems (CMS) and carry out functional testing.</li>
                             <li>Rebranding/Improve/Maintain websites using SASS/CSS, HTML, Photoshop.</li>
                             <li>Building Responsive and non-responsive Custom EDMs/E-newsletters, and validate results in different applications (e.g. Outlook, Gmail, Hotmail)</li>
@@ -242,7 +241,8 @@
                 <h2 class="mb-5">Interests</h2>
                 <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
                 <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development
-                    world.</p>
+                    world.
+                </p>
             </div>
         </section>
 
@@ -258,8 +258,8 @@
                         <i class="fa-li fa fa-trophy text-warning"></i> IBM Marketing Cloud Professional Certification</li>
                     <li>
                         <i class="fa-li fa fa-trophy text-warning"></i> AIMIA 2015 Passion Award Global Winner
-                        <p>Presented to ANZ Campaign Platform Team
-                        Building and Maintaining the whole ANZ Campaign eDMs</p></li>
+                        <p>Presented to ANZ Campaign Platform Team Building and Maintaining the whole ANZ Campaign eDMs</p>
+                    </li>
                 </ul>
             </div>
         </section>
