--- a/index.html
+++ b/index.html
@@ -162,8 +162,11 @@
                     <a class="portfolio-item" href="src/edm_template3.html" target="_blank">
                         <span class="caption">
                           <span class="caption-content">
-                            <h2>Strawberries</h2>
-                            <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+                            <h2>Retail Email template</h2>
+                            <ul>
+                                <li>This specific email template can be used in retail industry</li>
+                                <li>This is based on Mailchimp platform with variables</li>
+                            </ul>
                           </span>
                         </span>
                         <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
@@ -173,8 +176,7 @@
                     <a class="portfolio-item" href="#">
                         <span class="caption">
                           <span class="caption-content">
-                            <h2>Workspace</h2>
-                            <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                            <h2>More to come...</h2>
                           </span>
                         </span>
                         <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
