--- a/src/edm_template1.html
+++ b/src/edm_template1.html
@@ -341,7 +341,7 @@
                         <td align="center" style="font-family: Helvetica, verdana, arial, sans-serif; font-size: 10px; color: #494949; text-align:center; line-height:14px">Cupidatat do eu dolor esse quis aliquip laborum.</td>
                     </tr>
                     <tr>
-                        <td align="center" style="font-family: Helvetica, verdana, arial, sans-serif; font-size: 10px; color: #494949; text-align:center; line-height:14px">View this email <a href="#SPCLICKTOVIEW" name="View_online" style="text-decoration: underline; color: #494949; font-size:10px; text-align: center;" title="View online" xt="SPCLICKTOVIEW">in your browser.</a></td>
+                        <td align="center" style="font-family: Helvetica, verdana, arial, sans-serif; font-size: 10px; color: #494949; text-align:center; line-height:14px">View this email <a href="#" name="View_online" style="text-decoration: underline; color: #494949; font-size:10px; text-align: center;" title="View online" xt="SPCLICKTOVIEW">in your browser.</a></td>
                     </tr>
                     <tr>
                         <td height="8" style="font-size: 8px; line-height: 8px"><img alt="" border="0" height="1" src="http://contentz.mkt7780.com/lp/10402/10786/spacer.gif" style="display:block;" title="" width="1" /></td>
@@ -401,7 +401,7 @@
                                                     <table align="left" border="0" cellpadding="0" cellspacing="0" class="w100pc txtCenter" width="51" style="width: 51px;">
 
                                                         <tr>
-                                                            <td align="left" class="w100pc txtCenter padB15" width="51" style="width: 51px;"><img alt="" border="0" class="CardMob" height="33" name="Member_Card_Platinum" src="http://contentz.mkt7780.com/lp/10402/10786/CreditCard_DesktopARW_PlatVisa.png" style="display: block;" width="51"
+                                                            <td align="left" class="w100pc txtCenter padB15" width="51" style="width: 51px;"><img alt="" border="0" class="CardMob" height="33" name="Member_Card_Platinum" src="https://via.placeholder.com/151x33" style="display: block;" width="51"
                                                                 /></td>
                                                         </tr>
 
@@ -783,7 +783,7 @@
                                             </tr>
                                             <!-- Panel A TCs start-->
                                             <tr>
-                                                <td align="center" style="font-family: Helvetica, verdana, arial, sans-serif; font-size: 10px; color: #494949; text-align: center; line-height: 14px">The accrual and redemption of BRAND Reward Points is subject to our <a href="https://www.BRAND.com.au/content/dam/BRANDcomau/documents/pdf/BRAND-rewards-program-terms-conditions.pdf" name="CAMPAIGNCODE_Intro_TC"
+                                                <td align="center" style="font-family: Helvetica, verdana, arial, sans-serif; font-size: 10px; color: #494949; text-align: center; line-height: 14px">The accrual and redemption of BRAND Reward Points is subject to our <a href="#" name="CAMPAIGNCODE_Intro_TC"
                                                         style="text-decoration: underline; color: #494949; font-size: 10px; line-height: 14px;" target="_blank" title="Program Terms and Conditions" xt="SPCLICK">program terms and conditions</a>.</td>
                                             </tr>
                                             <!-- Panel A TCs end -->
@@ -811,7 +811,7 @@
                         <td class="NoMob" width="20" style="width: 20px;"><img alt="" border="0" class="NoMob" height="1" spname="http:__contentz.mkt922.com_lp_24550_240800_spacer.gif" name="http:__contentz.mkt922.com_lp_24550_240800_spacer.gif" src="http://contentz.mkt922.com/lp/24550/240800/spacer.gif"
                                 style="display:block;" title="" width="20" /></td>
                         <td align="center" class="NoMob" height="120" valign="top" width="560" style="width: 560px;">
-                            <a href="https://BRANDrewards.com" name="CAMPAIGNCODE_CTA" style="color:#494949; text-decoration:none;" target="_blank" title="Visit BRAND Rewards" xt="SPCLICK"><img alt="Visit BRAND Rewards" border="0" height="120" style="display:block; border:none;" width="560" src="https://via.placeholder.com/1120x240?text=Call+To+Action" /> </a>
+                            <a href="#" name="CAMPAIGNCODE_CTA" style="color:#494949; text-decoration:none;" target="_blank" title="Visit BRAND Rewards" xt="SPCLICK"><img alt="Visit BRAND Rewards" border="0" height="120" style="display:block; border:none;" width="560" src="https://via.placeholder.com/1120x240?text=Call+To+Action" /> </a>
                         </td>
                         <td class="NoMob" width="20" style="width: 20px;"><img alt="" border="0" class="NoMob" height="1" spname="http:__contentz.mkt922.com_lp_24550_240800_spacer.gif" name="http:__contentz.mkt922.com_lp_24550_240800_spacer.gif" src="http://contentz.mkt922.com/lp/24550/240800/spacer.gif"
                                 style="display:block;" title="" width="20" /></td>
@@ -825,7 +825,7 @@
                         <td class="w15px" width="20"><img alt="" border="0" class="w15px" height="1" spname="http:__contentz.mkt922.com_lp_24550_240800_spacer.gif" name="http:__contentz.mkt922.com_lp_24550_240800_spacer.gif" src="http://contentz.mkt922.com/lp/24550/240800/spacer.gif"
                                 style="display:block;" title="" width="20" /></td>
                         <td align="left" class="showtd" style="mso-hide: all; display:none; font-size: 0; max-height: 0; line-height: 0;" valign="top">
-                            <a name="CAMPAIGNCODE_CTA" href="https://BRANDrewards.com" target="_blank" title="Visit BRAND Rewards" xt="SPCLICK"><img alt="Visit BRAND Rewards" border="0" class="w100pc hauto showimg" style="mso-hide: all; display:none; font-size: 0; max-height: 0; line-height: 0;" title="Visit BRAND Rewards" src="https://via.placeholder.com/580x320?text=Call+To+Action+Mobile"
+                            <a name="CAMPAIGNCODE_CTA" href="#" target="_blank" title="Visit BRAND Rewards" xt="SPCLICK"><img alt="Visit BRAND Rewards" border="0" class="w100pc hauto showimg" style="mso-hide: all; display:none; font-size: 0; max-height: 0; line-height: 0;" title="Visit BRAND Rewards" src="https://via.placeholder.com/580x320?text=Call+To+Action+Mobile"
                                 /> </a>
                         </td>
                         <td class="w15px" width="20"><img alt="" border="0" class="w15px" height="1" spname="http:__contentz.mkt922.com_lp_24550_240800_spacer.gif" name="http:__contentz.mkt922.com_lp_24550_240800_spacer.gif" src="http://contentz.mkt922.com/lp/24550/240800/spacer.gif"
@@ -1312,13 +1312,13 @@
                                 </tr>
                                 <tr>
                                     <td style="color: #ffffff; text-decoration: none; font-family: Helvetica, verdana, arial, sans-serif; font-size: 14px; text-align:left;">
-                                        <a href="https://www.facebook.com/BRANDAustralia" name="Facebook" style="text-decoration: none;" target="_blank" title="Facebook" xt="SPCLICK"><img alt="facebook" height="32" spname="http:__contentz.mkt7780.com_lp_10402_10786_Facebook_64px.png" name="http:__contentz.mkt7780.com_lp_10402_10786_Facebook_64px.png" src="http://contentz.mkt7780.com/lp/10402/10786/Facebook_64px.png"
+                                        <a href="#" name="Facebook" style="text-decoration: none;" target="_blank" title="Facebook" xt="SPCLICK"><img alt="facebook" height="32" spname="http:__contentz.mkt7780.com_lp_10402_10786_Facebook_64px.png" name="http:__contentz.mkt7780.com_lp_10402_10786_Facebook_64px.png" src="http://contentz.mkt7780.com/lp/10402/10786/Facebook_64px.png"
                                                 style="vertical-align: middle; color: #ffffff;" width="32" /></a> &nbsp;
-                                        <a href="https://www.linkedin.com/company/BRAND" name="Linkedin" style="text-decoration: none;" target="_blank" title="Linkedin" xt="SPCLICK"><img alt="linkedin" height="32" spname="http:__contentz.mkt7780.com_lp_10402_10786_LinkedIn_64px.png" name="http:__contentz.mkt7780.com_lp_10402_10786_LinkedIn_64px.png" src="http://contentz.mkt7780.com/lp/10402/10786/LinkedIn_64px.png"
+                                        <a href="#" name="Linkedin" style="text-decoration: none;" target="_blank" title="Linkedin" xt="SPCLICK"><img alt="linkedin" height="32" spname="http:__contentz.mkt7780.com_lp_10402_10786_LinkedIn_64px.png" name="http:__contentz.mkt7780.com_lp_10402_10786_LinkedIn_64px.png" src="http://contentz.mkt7780.com/lp/10402/10786/LinkedIn_64px.png"
                                                 style="vertical-align: middle; color: #ffffff;" width="32" /></a> &nbsp;
                                         <a href="https://twitter.com/BRAND_AU" name="Twitter" style="text-decoration: none;" target="_blank" title="Twitter" xt="SPCLICK"><img alt="twitter" height="32" spname="http:__contentz.mkt7780.com_lp_10402_10786_Twitter_64px.png" name="http:__contentz.mkt7780.com_lp_10402_10786_Twitter_64px.png" src="http://contentz.mkt7780.com/lp/10402/10786/Twitter_64px.png"
                                                 style="vertical-align: middle; color: #ffffff;" width="32" /></a> &nbsp;
-                                        <a href="https://www.youtube.com/user/BRANDaustralia" name="Youtube" style="text-decoration: none;" target="_blank" title="Youtube" xt="SPCLICK"><img alt="youtube" height="32" spname="http:__contentz.mkt7780.com_lp_10402_10786_YouTube_64px.png" name="http:__contentz.mkt7780.com_lp_10402_10786_YouTube_64px.png" src="http://contentz.mkt7780.com/lp/10402/10786/YouTube_64px.png"
+                                        <a href="#" name="Youtube" style="text-decoration: none;" target="_blank" title="Youtube" xt="SPCLICK"><img alt="youtube" height="32" spname="http:__contentz.mkt7780.com_lp_10402_10786_YouTube_64px.png" name="http:__contentz.mkt7780.com_lp_10402_10786_YouTube_64px.png" src="http://contentz.mkt7780.com/lp/10402/10786/YouTube_64px.png"
                                                 style="vertical-align: middle; color: #ffffff;" width="32" /></a>
                                     </td>
                                 </tr>
