--- a/src/resume.html
+++ b/src/resume.html
@@ -38,7 +38,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#about">About</a>
+                    <a class="nav-link js-scroll-trigger" href="#about">About Me</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
@@ -48,9 +48,6 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
@@ -71,6 +68,7 @@
                 </div>
                 <p class="lead mb-5">I have 4 years of experiences in EDMs and Website development. I have independently developed responsive and nonresponsive websites and have built email templates from scratch using Photoshop, html5, CSS3 and JavaScript/Jquery. These are
                     generic templates which can be customized to meet any given requirement.</p>
+                <p class="lead mb-5">Personally, I enjoy excerciese and outdoor activies.</p>
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/angela-du-26187869/">
                         <i class="fab fa-linkedin-in"></i>
@@ -131,7 +129,7 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
-                        <h3 class="mb-0">Web Design Intern</h3>
+                        <h3 class="mb-0">Web Developer Intern</h3>
                         <div class="subheading mb-3">Tecco Technology</div>
                         <ul>
                             <li>
@@ -227,22 +225,10 @@
                     <li>
                         <i class="fa-li fa fa-check"></i> Cross Browser Testing &amp; Debugging</li>
                     <li>
-                        <i class="fa-li fa fa-check"></i> Cross Functional Teams</li>
+                        <i class="fa-li fa fa-check"></i> Cross Functional Teams Coordination/Communication</li>
                     <li>
                         <i class="fa-li fa fa-check"></i> Agile Development &amp; Scrum</li>
                 </ul>
-            </div>
-        </section>
-
-        <hr class="m-0">
-
-        <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
-            <div class="w-100">
-                <h2 class="mb-5">Interests</h2>
-                <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development
-                    world.
-                </p>
             </div>
         </section>
 
