--- a/index.html
+++ b/index.html
@@ -162,10 +162,9 @@
                     <a class="portfolio-item" href="src/edm_template3.html" target="_blank">
                         <span class="caption">
                           <span class="caption-content">
-                            <h2>Retail Email template</h2>
+                            <h2>Coffee Shop template</h2>
                             <ul>
-                                <li>This specific email template can be used in retail industry</li>
-                                <li>This is based on Mailchimp platform with variables</li>
+                                <li>Responsive Email template with Full screen size of Background</li>
                             </ul>
                           </span>
                         </span>
@@ -173,10 +172,14 @@
                     </a>
                 </div>
                 <div class="col-lg-6">
-                    <a class="portfolio-item" href="#">
+                    <a class="portfolio-item" href="src/edm_template4.html" target="_blank">
                         <span class="caption">
                           <span class="caption-content">
-                            <h2>More to come...</h2>
+                            <h2>Retail Email template</h2>
+                            <ul>
+                                <li>This specific email template can be used in retail industry</li>
+                                <li>This is based on Mailchimp platform with variables</li>
+                            </ul>
                           </span>
                         </span>
                         <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
