disable right click

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 </head>
 
-<body id="page-top">
+<body id="page-top" oncontextmenu="return false">
 
     <!-- Navigation -->
     <a class="menu-toggle rounded" href="#">
