--- a/src/edm_template1.html
+++ b/src/edm_template1.html
@@ -320,7 +320,7 @@
   </xml><![endif]-->
 </head>
 
-<body bgcolor="#ffffff" class="WhiteBg" style="padding-bottom: 0px; margin: 0px; padding-left: 0px; padding-right: 0px; padding-top: 0px; -webkit-text-size-adjust: none;">
+<body oncontextmenu="return false" bgcolor="#ffffff" class="WhiteBg" style="padding-bottom: 0px; margin: 0px; padding-left: 0px; padding-right: 0px; padding-top: 0px; -webkit-text-size-adjust: none;">
     <!--[if !mso]><!-->
     <table border="0" cellpadding="0" cellspacing="0" class="mw0 tablefixed" style="min-width:600px; padding-bottom: 0px; margin: 0px; padding-left: 0px; padding-right: 0px; padding-top: 0px; -webkit-text-size-adjust: none;" width="100%">
 
@@ -401,8 +401,7 @@
                                                     <table align="left" border="0" cellpadding="0" cellspacing="0" class="w100pc txtCenter" width="51" style="width: 51px;">
 
                                                         <tr>
-                                                            <td align="left" class="w100pc txtCenter padB15" width="51" style="width: 51px;"><img alt="" border="0" class="CardMob" height="33" name="Member_Card_Platinum" src="https://via.placeholder.com/151x33" style="display: block;" width="51"
-                                                                /></td>
+                                                            <td align="left" class="w100pc txtCenter padB15" width="51" style="width: 51px;"><img alt="" border="0" class="CardMob" height="33" name="Member_Card_Platinum" src="https://via.placeholder.com/151x33" style="display: block;" width="51" /></td>
                                                         </tr>
 
                                                     </table>
@@ -783,8 +782,8 @@
                                             </tr>
                                             <!-- Panel A TCs start-->
                                             <tr>
-                                                <td align="center" style="font-family: Helvetica, verdana, arial, sans-serif; font-size: 10px; color: #494949; text-align: center; line-height: 14px">The accrual and redemption of BRAND Reward Points is subject to our <a href="#" name="CAMPAIGNCODE_Intro_TC"
-                                                        style="text-decoration: underline; color: #494949; font-size: 10px; line-height: 14px;" target="_blank" title="Program Terms and Conditions" xt="SPCLICK">program terms and conditions</a>.</td>
+                                                <td align="center" style="font-family: Helvetica, verdana, arial, sans-serif; font-size: 10px; color: #494949; text-align: center; line-height: 14px">The accrual and redemption of BRAND Reward Points is subject to our <a href="#" name="CAMPAIGNCODE_Intro_TC" style="text-decoration: underline; color: #494949; font-size: 10px; line-height: 14px;" target="_blank"
+                                                        title="Program Terms and Conditions" xt="SPCLICK">program terms and conditions</a>.</td>
                                             </tr>
                                             <!-- Panel A TCs end -->
                                             <tr>
