--- a/src/edm_template2.html
+++ b/src/edm_template2.html
@@ -676,7 +676,7 @@
     </style>
 </head>
 
-<body>
+<body oncontextmenu="return false">
     <center>
         <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" id="bodyTable" style="height:100%;">
             <tr>
