--- a/src/edm_template4.html
+++ b/src/edm_template4.html
@@ -134,7 +134,7 @@
     </style>
 </head>
 
-<body style="-moz-box-sizing:border-box;-ms-text-size-adjust:100%;-webkit-box-sizing:border-box;-webkit-text-size-adjust:100%;Margin:0;background:#fff!important;box-sizing:border-box;color:#0a0a0a;font-family:Helvetica,Arial,sans-serif;font-size:14px;font-weight:400;line-height:1.3;margin:0;min-width:100%;padding:0;text-align:left;width:100%!important">
+<body oncontextmenu="return false" style="-moz-box-sizing:border-box;-ms-text-size-adjust:100%;-webkit-box-sizing:border-box;-webkit-text-size-adjust:100%;Margin:0;background:#fff!important;box-sizing:border-box;color:#0a0a0a;font-family:Helvetica,Arial,sans-serif;font-size:14px;font-weight:400;line-height:1.3;margin:0;min-width:100%;padding:0;text-align:left;width:100%!important">
     <!--
 -->
     <!-- Insert ‌  hack after hidden preview text -->
@@ -395,7 +395,9 @@
                                     </center>
                                     <center mc:variant="Terms and Conditions" mc:repeatable="repeat_2" style="min-width:580px;width:100%;" mc:repeatindex="16">
                                         <div>
-                                            <p style="margin-left:40px;margin-right:40px;margin-bottom:24px;color:#0a0a0a;font-family:Helvetica, Arial, sans-serif;font-size:10px;font-weight:400;mso-line-height-rule:exactly;line-height:13px;margin-top:24px;padding:0;text-align:center;">Ut Lorem id exercitation excepteur proident amet. Magna cillum et ipsum aliqua nisi tempor quis laboris. Esse commodo consequat dolore amet minim.Offer <span class="apple0a0a0a">begins 01/01/19</span> and <span class="apple0a0a0a">ends 01/01/19</span> at <span class="apple0a0a0a">5pm EAST</span>.</p>
+                                            <p style="margin-left:40px;margin-right:40px;margin-bottom:24px;color:#0a0a0a;font-family:Helvetica, Arial, sans-serif;font-size:10px;font-weight:400;mso-line-height-rule:exactly;line-height:13px;margin-top:24px;padding:0;text-align:center;">Ut Lorem id exercitation excepteur proident amet. Magna cillum et ipsum aliqua nisi tempor quis laboris. Esse commodo consequat dolore amet minim.Offer <span class="apple0a0a0a">begins 01/01/19</span> and
+                                                <span
+                                                    class="apple0a0a0a">ends 01/01/19</span> at <span class="apple0a0a0a">5pm EAST</span>.</p>
                                         </div>
                                     </center>
                                     <!-- 1COLUMN -->
@@ -489,8 +491,7 @@
                                                     <table style="border-collapse:collapse;border-spacing:0;padding:0;text-align:left;vertical-align:top;width:100%;">
                                                         <tr style="padding:0;text-align:left;vertical-align:top;">
                                                             <th style="margin:0;color:#0a0a0a;font-family:Helvetica, Arial, sans-serif;font-size:14px;font-weight:400;line-height:1.3;padding:0;text-align:left;">
-                                                                <p class="text-center u-margin-0" style="margin:0 !important;margin-bottom:10px;color:#0a0a0a;font-family:Helvetica, Arial, sans-serif;font-size:14px;font-weight:400;line-height:1.3;padding:0;text-align:center;"><a href="#"
-                                                                        style="margin:0;color:#000;font-family:Helvetica, Arial, sans-serif;font-weight:400;line-height:1.3;padding:0;text-align:left;text-decoration:none;">CATEGORY NAME2</a>
+                                                                <p class="text-center u-margin-0" style="margin:0 !important;margin-bottom:10px;color:#0a0a0a;font-family:Helvetica, Arial, sans-serif;font-size:14px;font-weight:400;line-height:1.3;padding:0;text-align:center;"><a href="#" style="margin:0;color:#000;font-family:Helvetica, Arial, sans-serif;font-weight:400;line-height:1.3;padding:0;text-align:left;text-decoration:none;">CATEGORY NAME2</a>
                                                                 </p>
                                                             </th>
                                                         </tr>
@@ -506,8 +507,7 @@
                                                     <table style="border-collapse:collapse;border-spacing:0;padding:0;text-align:left;vertical-align:top;width:100%;">
                                                         <tr style="padding:0;text-align:left;vertical-align:top;">
                                                             <th style="margin:0;color:#0a0a0a;font-family:Helvetica, Arial, sans-serif;font-size:14px;font-weight:400;line-height:1.3;padding:0;text-align:left;">
-                                                                <p class="text-center u-margin-0" style="margin:0 !important;margin-bottom:10px;color:#0a0a0a;font-family:Helvetica, Arial, sans-serif;font-size:14px;font-weight:400;line-height:1.3;padding:0;text-align:center;"><a href="#"
-                                                                        style="margin:0;color:#000;font-family:Helvetica, Arial, sans-serif;font-weight:400;line-height:1.3;padding:0;text-align:left;text-decoration:none;">CATEGORY NAME3</a>
+                                                                <p class="text-center u-margin-0" style="margin:0 !important;margin-bottom:10px;color:#0a0a0a;font-family:Helvetica, Arial, sans-serif;font-size:14px;font-weight:400;line-height:1.3;padding:0;text-align:center;"><a href="#" style="margin:0;color:#000;font-family:Helvetica, Arial, sans-serif;font-weight:400;line-height:1.3;padding:0;text-align:left;text-decoration:none;">CATEGORY NAME3</a>
                                                                 </p>
                                                             </th>
                                                         </tr>
@@ -517,8 +517,7 @@
                                                     <table style="border-collapse:collapse;border-spacing:0;padding:0;text-align:left;vertical-align:top;width:100%;">
                                                         <tr style="padding:0;text-align:left;vertical-align:top;">
                                                             <th style="margin:0;color:#0a0a0a;font-family:Helvetica, Arial, sans-serif;font-size:14px;font-weight:400;line-height:1.3;padding:0;text-align:left;">
-                                                                <p class="text-center u-margin-0" style="margin:0 !important;margin-bottom:10px;color:#0a0a0a;font-family:Helvetica, Arial, sans-serif;font-size:14px;font-weight:400;line-height:1.3;padding:0;text-align:center;"><a href="#"
-                                                                        style="margin:0;color:#000;font-family:Helvetica, Arial, sans-serif;font-weight:400;line-height:1.3;padding:0;text-align:left;text-decoration:none;">CATEGORY NAME4</a>
+                                                                <p class="text-center u-margin-0" style="margin:0 !important;margin-bottom:10px;color:#0a0a0a;font-family:Helvetica, Arial, sans-serif;font-size:14px;font-weight:400;line-height:1.3;padding:0;text-align:center;"><a href="#" style="margin:0;color:#000;font-family:Helvetica, Arial, sans-serif;font-weight:400;line-height:1.3;padding:0;text-align:left;text-decoration:none;">CATEGORY NAME4</a>
                                                                 </p>
                                                             </th>
                                                         </tr>
@@ -534,8 +533,7 @@
                                                     <table style="border-collapse:collapse;border-spacing:0;padding:0;text-align:left;vertical-align:top;width:100%;">
                                                         <tr style="padding:0;text-align:left;vertical-align:top;">
                                                             <th style="margin:0;color:#0a0a0a;font-family:Helvetica, Arial, sans-serif;font-size:14px;font-weight:400;line-height:1.3;padding:0;text-align:left;">
-                                                                <p class="text-center u-margin-0" style="margin:0 !important;margin-bottom:10px;color:#0a0a0a;font-family:Helvetica, Arial, sans-serif;font-size:14px;font-weight:400;line-height:1.3;padding:0;text-align:center;"><a href="#"
-                                                                        style="margin:0;color:#000;font-family:Helvetica, Arial, sans-serif;font-weight:400;line-height:1.3;padding:0;text-align:left;text-decoration:none;">CATEGORY NAME5</a>
+                                                                <p class="text-center u-margin-0" style="margin:0 !important;margin-bottom:10px;color:#0a0a0a;font-family:Helvetica, Arial, sans-serif;font-size:14px;font-weight:400;line-height:1.3;padding:0;text-align:center;"><a href="#" style="margin:0;color:#000;font-family:Helvetica, Arial, sans-serif;font-weight:400;line-height:1.3;padding:0;text-align:left;text-decoration:none;">CATEGORY NAME5</a>
                                                                 </p>
                                                             </th>
                                                         </tr>
@@ -545,8 +543,7 @@
                                                     <table style="border-collapse:collapse;border-spacing:0;padding:0;text-align:left;vertical-align:top;width:100%;">
                                                         <tr style="padding:0;text-align:left;vertical-align:top;">
                                                             <th style="margin:0;color:#0a0a0a;font-family:Helvetica, Arial, sans-serif;font-size:14px;font-weight:400;line-height:1.3;padding:0;text-align:left;">
-                                                                <p class="text-center u-margin-0" style="margin:0 !important;margin-bottom:10px;color:#0a0a0a;font-family:Helvetica, Arial, sans-serif;font-size:14px;font-weight:400;line-height:1.3;padding:0;text-align:center;"><a href="#"
-                                                                        style="margin:0;color:#000;font-family:Helvetica, Arial, sans-serif;font-weight:400;line-height:1.3;padding:0;text-align:left;text-decoration:none;">CATEGORY NAME6</a>
+                                                                <p class="text-center u-margin-0" style="margin:0 !important;margin-bottom:10px;color:#0a0a0a;font-family:Helvetica, Arial, sans-serif;font-size:14px;font-weight:400;line-height:1.3;padding:0;text-align:center;"><a href="#" style="margin:0;color:#000;font-family:Helvetica, Arial, sans-serif;font-weight:400;line-height:1.3;padding:0;text-align:left;text-decoration:none;">CATEGORY NAME6</a>
                                                                 </p>
                                                             </th>
                                                         </tr>
