--- a/index.html
+++ b/index.html
@@ -138,8 +138,9 @@
                           <span class="caption-content">
                             <h2>Generic EDM template</h2>
                             <ul>
-                                <li>Built from scratch using pure HTML and CSS</li>
+                                <li>Built from scratch using email-specific HTML and CSS</li>
                                 <li>Tested aross over 20 Email Providers and Devices(i.e. Desktop, Tablet, Mobile, etc)</li>
+                                <li>Modular layouts, such as one-colume layout, two-colume layout, introduction, header, and footer</li>
                                 <li>Can be customized for different purposes</li>
                             </ul>
                           </span>
@@ -147,17 +148,7 @@
                         <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
                     </a>
                 </div>
-                <div class="col-lg-6">
-                    <a class="portfolio-item" href="src/edm_template2.html" target="_blank">
-                        <span class="caption">
-                          <span class="caption-content">
-                            <h2>Chrismas card - Email</h2>
-                            <p class="mb-0">This email template is used for sending Chrismas Greeting</p>
-                          </span>
-                        </span>
-                        <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
-                    </a>
-                </div>
+
                 <div class="col-lg-6">
                     <a class="portfolio-item" href="src/edm_template3.html" target="_blank">
                         <span class="caption">
@@ -165,6 +156,7 @@
                             <h2>Coffee Shop template</h2>
                             <ul>
                                 <li>Responsive Email template with Full screen size of Background</li>
+                                <li>Well designed</li>
                             </ul>
                           </span>
                         </span>
@@ -183,6 +175,17 @@
                           </span>
                         </span>
                         <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
+                    </a>
+                </div>
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href="src/edm_template2.html" target="_blank">
+                        <span class="caption">
+                          <span class="caption-content">
+                            <h2>Chrismas card - Email</h2>
+                            <p class="mb-0">This email template is used for sending Chrismas Greeting</p>
+                          </span>
+                        </span>
+                        <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
                     </a>
                 </div>
             </div>
